# gmocktest

./: CMakeLists.txt  StateMachine.cpp  StateMachine.hpp  main.cpp
